home page added

--- a/public/html/stopwatch.html
+++ b/public/html/stopwatch.html
@@ -6,9 +6,18 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
       <link rel="stylesheet" href="../../public/css/stopwatch.css" />
+      <link rel="stylesheet" href="../../public/css/style.css">
    </head>
    <body>
-      <div class="stopwatch">
+
+       <!-- HAMBURGER MENU  -->
+<div class="home">
+   <a href="../../index.html">HOME</a>
+</div>
+
+<!-- STOPWATCH -->
+  
+<div class="stopwatch">
          <div class="stopwatch__inner">
           
             <h1>STOPWATCH</h1>
@@ -32,5 +41,6 @@
       </div>
 
       <script src="../../public/js/stopwatch.js"></script>
+      <script src="../../public/js/index.js"></script>
    </body>
 </html>
